// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radio-button/presenters/ButtonPresenter renders with all props 1`] = `
.emotion-0 {
  opacity: 0.4;
  position: relative;
  color: transparent;
  border: none;
  background-color: transparent;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  box-shadow: inset 0 0 0 1px  rgba(128,128,128,0.5) ,0 0 0 0px transparent;
}

<span
  className="emotion-0"
/>
`;

exports[`radio-button/presenters/ButtonPresenter renders without props 1`] = `
.emotion-0 {
  opacity: 1.0;
  position: relative;
  color: transparent;
  border: none;
  background-color: transparent;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  box-shadow: inset 0 0 0 1px  rgba(128,128,128,0.5) ,0 0 0 0px transparent;
}

<span
  className="emotion-0"
/>
`;
